# experiment-tracker

./: .gitignore  Cargo.toml  README.md  config.toml  updated_cli.md
experiments/run_test/: metrics.jsonl
migrations/: 001_init.sql
src/: export.rs  lib.rs  main.rs  platform.rs  watcher.rs
src/app/: actions.rs  handler.rs  mod.rs  state.rs
src/config/: settings.rs
src/db/: metrics.rs  mod.rs  runs.rs  schema.rs  tags.rs
src/docker/: manager.rs  mod.rs
src/export/: csv.rs  latex.rs  markdown.rs  mod.rs
src/gpu/: mod.rs  monitor.rs
src/models/: hyperparams.rs  metric.rs  mod.rs  run.rs  tag.rs
src/ui/: ascii_art.rs  compare.rs  dashboard.rs  gpu_bar.rs  gpu_screen.rs  menu.rs  mod.rs  popups.rs  run_detail.rs  run_dialog.rs  settings.rs  splash.rs  status_bar.rs
src/ui/components/: input.rs  mod.rs  popup.rs  sparkline.rs  table.rs  tabs.rs
src/utils/: color.rs  time.rs
src/watcher/: directory.rs  mod.rs  parser.rs
tests/: db_tests.rs  export_tests.rs
