[package]
name = "experiment-tracker"
version = "0.1.0"
edition = "2021"
description = "A TUI experiment tracker for ML workflows"
authors = ["Lipp"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization & Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# File watching (Day 2, but declaring now)
notify = "7"

# Diffing (Day 3)
similar = "2"

[profile.release]
opt-level = 3
lto = true

[dev-dependencies]
tempfile = "3"
